--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
 .App {
     text-align: center;
-    height: 100vh;
-    background: black;
+    height: 100%;
+    background: url('./img/cinema.jpeg');
+    flex-wrap: wrap;
 }
 
 .intro {
+    padding: 10px;
     height: 60%;
-    width: 50%;
+    width: 60%;
     margin-top: 40px;
     margin-bottom: 40px;
     font-weight: bold;
@@ -15,7 +17,6 @@
 }
 
 .App-header {
-    background-color: #282c34;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -40,8 +41,29 @@
 }
 
 .Movie-wrapper {
-    width: 500px;
+    width: 300px;
     /* height: 400px; */
-    background-color: red;
-    color: black;
+    background-color: #282c34;
+    color: white;
+}
+.Movie-title {
+    height: 60px;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 8px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.Movie-search {
+    width: 400px;
+    padding: 10px;
+    border: 0;
+    box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+    border-radius: 15px;
+}
+.Movie-image {
+    width: 100%;
+    height: auto;
+}
+.Movie-rate {
+    color: red;
 }
